# custom_demo

./: .gitmodules  .mxproject  CMakeLists.txt  README.md  custom_demo.ioc  demo_test.jdebug  test.jdebug
App/IMU/MPU6050/: mpu6050.cpp  mpu6050.hpp
App/IMU/Solution/: solution.hpp
App/IMU/Task/: IMUtasks.cpp  IMUtasks.h
App/MPU6050/: mpu6050.cpp  mpu6050.hpp
App/Mahony/: Mahony.cpp  Mahony.hpp
App/Move_attitude/: MoveAttitude.cpp  MoveAttitude.hpp  move_attitude.cpp  move_attitude.hpp
App/Move_attitude/Task/: MoveAttitudeTask.cpp  MoveAttitudeTask.h
App/Translate/: translate.cpp  translate.hpp
App/Translate/Task/: TranslateTask.cpp  TranslateTask.h
App/config/: config.h
Core/Inc/: main.h  stm32f1xx_it.h
Core/Src/: adc.c  freertos.c  gpio.c  main.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c
USB_DEVICE/App/: usbd_cdc_if.c
cmake/: gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt
